--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,36 @@
-#homebutton{ border-bottom: 2px solid #e65d5d}
-#home{
-	height: calc( 100vh - 100px);
-	background-image: url(../img/websites.jpg);
+img{ 
+	margin-top: 40px;
+	height: 40vh; 
+	width: auto; 
+	box-shadow: 15px 15px 10px #111; 
+}
+
+h1 { 
+	font-family: helvetica neue; 
+	font-size: 10vh; 
+	text-shadow: 0px 0px 5px #000; 
+}
+
+
+
+.outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: url(../img/websites.jpg);
 	background-position: 50% 50%;
 	background-size: cover;
 }
 
-#home-e{
-	text-align: center;
+.middle {
+    display: table-cell;
+    vertical-align: middle;
 }
-#home-e img{ margin-top: 100px; height: 300px; width: 300px; box-shadow: 15px 15px 10px #111; }
-#home-e h1 { font-family: helvetica neue; font-size: 3em; text-shadow: 0px 0px 5px #000; }
-#link:link, #link:active, #link:visited { color: #ccc; text-shadow: 1px 1px 1px #000; box-shadow: 1px 1px 0px #000; border: 1px solid #fff; text-decoration: none; padding: 10px 20px; font-weight: normal; font-size: 25px; background-color: #222; border-radius: 15px;  }
-#link:hover { }
 
+.inner {
+    margin-left: auto;
+    margin-right: auto; 
+    width: 100%;
+    text-align: center;
+}
