--- a/css/style.css
+++ b/css/style.css
@@ -1,252 +1,332 @@
-@font-face { font-family: "nvd black"; src: url(../fonts/nvd_black.ttf) format("truetype"); }
-@font-face { font-family: "nvd bold"; src: url(../fonts/nvd_bold.ttf) format("truetype"); }
-@font-face { font-family: "nvd light"; src: url(../fonts/nvd_light.ttf) format("truetype"); }
-@font-face { font-family: "nvd"; src: url(../fonts/nvd_regular.ttf) format("truetype"); }
-
+@font-face { font-family: "nvd_light"; src: url(../fonts/nvd_light.ttf) format("truetype"); }
+@font-face { font-family: "nvd_black"; src: url(../fonts/nvd_black.ttf) format("truetype"); }
+@font-face { font-family: "brush"; src: url(../fonts/brush.ttf) format("truetype"); }
 
 html, body {
-		background: url(../img/sky.jpg);
-	background-size: cover;
 	padding: 0px;
 	margin: 0px;
-	font-family: nvd;
-	font-weight: normal;
-	color: #fff;
+	background-color: #000;
+	font-family: nvd_light;
+	font-size: 20px;
+	letter-spacing: 2px;
+	color: #000;
+	overflow: hidden;
 }
-
-h1{font-family: nvd black; font-size: 100px; line-height: 80px; margin: 0px; padding: 0px; text-shadow: 0px 0px 10px #000;}
-h2{font-size: 140px; line-height: 100px; margin: 0px; padding: 0px; text-shadow: 0px 0px 10px #000;}
-h3{font-family: nvd bold;}
-h4{}
-h5{ font-family: nvd bold; font-size: 30px; margin: 0px; padding: 0px; }
-
-.sky{
+q{
+	font-size: 56px;
+	font-family: brush;
+}
+.wrapper{
 	height: 100vh;
 	width: 100vw;
-	z-index: 0;
-	overflow: scroll;
+	overflow: hidden;
 }
-
-header{
-	position: fixed;
-	top: 0px;
-	height: 50px;
+.nav{
+	height: 75px;
 	width: 100%;
-	box-sizing: border-box;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	background-color: #fff;
+	text-align: left;
 	z-index: 2;
-	background-color: transparent;
-	text-align: right;
+	box-shadow: 0px 0px 5px #000;
 }
-		header li{
+	.menu{
+		height: 75px;
+		width: 150px;
+		border: 0px;
+		background-color: transparent;
+		margin: 0px;
+		padding: 0px;
+		display: inline-block;
+		float: left;
+	}
+	.menu img{
+		height: 75px;
+		width: 150px;
+	}
+	button:hover{
+		opacity: 0.8;
+		cursor: pointer;
+	}
+	.links{
+		float: left;
+	}
+		.links ul{
+			height: 75px;
 			display: inline-block;
 			list-style: none;
-			margin-right: 30px;
 		}
-
-.outer {
-    display: table;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-}
-	#logo{
-		z-index: 1;
-	}
-
-.middle {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-}
-	.slogans{
-		font-size: 90px;
-		width: 800px;
-		margin: 20px auto 0px auto;
-		text-align: center;
-		height: 100px;
-		font-family: nvd black;
-	}
-		#slogan1{
-			display: none;
-			position: absolute;
-			text-align: center;
-			width: 800px;
-			height: 100px;
+		.links li{
+			height: 75px;
+			display: inline-block;
+			margin-right: 40px;
+			margin-top: 6px;
 		}
-		#slogan2{
-			display: none;
-			position: absolute;
-			text-align: center;
-			width: 800px;
-			height: 100px;
+		.links a{
+			color: #000;
+			text-decoration: none;
 		}
-		#slogan3{
-			display: none;
-			position: absolute;
-			text-align: center;
-			width: 800px;
-			height: 100px;
+		.links a:hover{
+			color: #666;
 		}
-		#nvdlogo{
-			width: 50vh;
-			height: auto;
-		}
-
 .content{
+	height: calc(100% - 150px);
 	width: 100%;
-	height: 2000px;
-	position: relative;
-	z-index: 1;
-	padding-top: 100vh;
+	background-color: #000;
+	position: absolute;
+	top: 75px;
+	left: 0px;
+	overflow: scroll;
 }
-	
-	.blank{
-		height: 100vh;
-		width: 100%;
-		z-index: 1;
-	}
-	.buildings{
-		width: 100%;
-	}
-		.buildings img{
-			width: 100%;
-		}
-.reflection{
-	width: 100%;
-	height: 150px;
-	background: url(../img/reflection.jpg);
-	background-size: 100% 150px;
-	margin-top: -5px;
+.splash{
+	background-image: url(../img/bg1.jpg);
+	background-size: contain;
 	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	width: 100%;
+	max-width: 1000px;
+	height: 100%;
+	margin: 0px auto;
 }
-.water{
+.about{
+	height: 500px;
 	width: 100%;
-	height: 1800px;
-	background: url(../img/water.jpg);
-	background-size: 100% 2400px;
-	margin-top: -5px;
-	background-repeat: no-repeat;
+	max-width: 1000px;
+	color: #fff;
+	text-align: center;
+	margin: 90px auto;
+}
+.one{
+	height: 100%;
+	width: 33%;
 	box-sizing: border-box;
+	/*border: 1px solid #fff;*/
+	float: left;
+	padding: 20px;
+	border-right: 1px solid #fff;
+}
+.two{
+	height: 100%;
+	width: 34%;
+	box-sizing: border-box;
+	float: left;
+	padding: 20px;
+}
+.three{
+	height: 100%;
+	width: 33%;
+	box-sizing: border-box;
+	border-left: 1px solid #fff;
+	float: right;
+	padding: 20px;
 }
 
-.margin{
-	width: 960px;
-	height: 900px;
-	padding-top: 50px;
-	margin: 0px auto;
-	box-sizing: border-box;
+.portfolio{
+	background-image: url(../img/bg.jpg);
+	background-size: cover;
+	background-position: 50% 50%;
+	height: 500px;
+	width: 100%;
+}
+	.center{
+		width: 1100px;
+		height: 100%;
+		box-sizing: border-box;
+		margin: 0px auto;
+	}
+		.center img:hover{
+			opacity: 0.8;
+		}
+	.top{
+		width: 100%;
+		height: 250px;		
+		padding-top: 50px;
+		box-sizing: border-box;
+	}
+	.bottom{
+		width: 100%;
+		height: 250px;
+	}
+		.top-left{
+			width: 300px;
+			height: 150px;
+			float: left;
+			box-sizing: border-box;
+			text-align: center;
+		}
+		.top-middle{
+			width: 500px;
+			height: 150px;
+			float: left;
+			box-sizing: border-box;
+			text-align: center;
+		}
+		.top-right{
+			box-sizing: border-box;
+			width: 290px;
+			height: 150px;
+			float: right;
+			text-align: center;
+		}
+
+		.bottom-left{
+			box-sizing: border-box;
+			width: 300px;
+			height: 150px;
+			float: left;
+			text-align: center;
+		}
+		.bottom-middle-left{
+			box-sizing: border-box;
+			width: 200px;
+			height: 150px;
+			float: left;
+			text-align: center;
+		}
+		.bottom-middle-right{
+			box-sizing: border-box;
+			width: 340px;
+			height: 150px;
+			float: left;
+			text-align: center;
+		}
+		.bottom-right{
+			box-sizing: border-box;
+			width: 260px;
+			height: 150px;
+			float: right;
+			text-align: center;
+		}
+
+.testimonials{
+	height: 400px;
+	width: 1000px;
+	color: #fff;
+	margin: 100px auto;
 	text-align: center;
+	display: table;
+}
+.click-here{
+	text-align: center;
+	height: 60px;
+	color: #999999;
+}
+	.table-cell{
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+.footer{
+	height: 75px;
+	width: 100%;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	background-color: #fff;
+	box-shadow: 0px 0px 4px #000;
+	font-size: 15px;
+	padding: 5px;
+	box-sizing: border-box;
+}
+	.footer-left{
+		width: 40%;
+		height: 65px;
+		float: left;
+		text-align: left;
+		padding-top: 25px;
+		padding-left: 20px;
+		box-sizing: border-box;
+	}
+	.footer-middle{
+		float: left;
+		width: 20%;
+		height: 65px;
+		text-align: center;
+		box-sizing: border-box;
+	}
+		.chat-button{
+			height: 65px;
+			width: 65px;
+			background-color: #222;
+			border-radius: 50%;
+			border: 1px solid #ccc;
+		}
+			.chat-button:focus{
+				outline: none;
+			}
+			.footer-middle img{
+				height: 55px;
+				width: 55px;
+				margin-left: -2px;
+			}
+	.footer-right{
+		width: 40%;
+		height: 65px;
+		float: right;
+		text-align: right;
+		padding-top: 25px;
+		padding-right: 20px;
+		box-sizing: border-box;
+	}
+
+.nvd{
+	color: #fff;
+	height: 800px;
+	width: 100%;
+	background-image: url(../img/newvintagedesignlogo.jpg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	text-align: center;
+	box-sizing: border-box;
 }
 
 .contact{
-	height: 1250px;
-	width: 100%;
-	background-color: #000;
-	margin: 0px auto;
+	color: #fff;
+	height: 500px;
+	width: 350px;
+	margin-left: -175px;
+	border: 2px solid #fff;
+	background-color: #222;
+	position: absolute;
+	bottom: -500px;
+	left: 50%;
 	text-align: center;
+	padding-top: 10px;
+	box-sizing: border-box;
 }
-	.contact-box{
-		width: 960px;
-		height: 400px;
-		margin: 0px auto;
-		text-align: center;
-		font-family: nvd light;
-		font-size: 27px;
+	.c-short{
+		height: 45px;
+		width: 275px;
+		font-size: 20px;
+		color: #666;
+		text-align: left;
+		padding-left: 10px;
+		margin-bottom: 30px;
+		box-sizing: border-box;
+		border: 2px solid #444;
 	}
-	.contact-left{
-		width: 480px;
-		height: 100%;
-		background-color: #000;
-		float: left;
+	.c-long{
+		width: 275px;
+		font-size: 20px;
+		color: #666;
+		padding-left: 10px;
+		margin-bottom: 30px;
+		margin-left: 7px;
+		box-sizing: border-box;
 	}
-		.contact-left img{
-			height: 400px;
+	.c-submit{
+		background-color: #ccc;
+		padding: 10px 30px;
+		margin-top: -20px;
+		margin-right: -160px;
+		box-sizing: border-box;
+		font-size: 20px;
+		border: 0px;
+		cursor: pointer;
+	}
+		.c-submit:hover{
+			background-color: #999;
 		}
-	.contact-right{
-		width: 480px;
-		height: 360px;
-		background-color: #000;
-		float: right;
-		text-align: center;
-		padding-top: 30px; 
-		font-family: nvd;
-	}
-
-
-
-#websites{
-	overflow: hidden;
-}
-
-#websites-e{
-	text-align: center;
-	padding-top: 100px;
-	overflow: hidden;
-}
-
-#websites-e h1{
-	font-size: 10em;
-	padding: 0px;
-	margin: 0px;
-	line-height: 130px;
-}
-
-#websites-e h2{
-	font-size: 16.4em;
-	padding: 0px;
-	margin: 0px;
-	line-height: 160px;
-}
-
-#featured{
-	overflow: hidden;
-	width: 990px;
-	background-color: #000;
-	margin: 20px auto;
-}
-
-#item{
-	float: left;
-	background-color: #fff;
-	height: auto;
-	width: 300px;
-	height: 300px;
-	margin: 15px 15px;
-}
-
-#item img{
-	height: auto;
-	width: 280px;
-	height: 280px;
-	margin: 10px 10px;
-}
-
-#item:hover{
-	opacity: 0.6;
-}
-
-iframe{
-	height: 700px;
-	width: 600px;
-	border: 0px;
-}
-
-footer{
-	background-color: #000;
-	font-size: 12px;
-	padding-left: 20px;
-	height: 70px;
-}
-
-	footer img{
-		height: 40px;
-		width: auto;
-		float: right;
-		margin-right: 20px;
-	}
-	footer img:hover{
-				opacity: 0.7;
-	}
-
-
-
