--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @font-face { font-family: "nvd_black"; src: url(../fonts/nvd_black.ttf) format("truetype"); }
 @font-face { font-family: "brush"; src: url(../fonts/brush.ttf) format("truetype"); }
 
+
 html, body {
 	padding: 0px;
 	margin: 0px;
@@ -78,7 +79,7 @@ q{
 	position: absolute;
 	top: 75px;
 	left: 0px;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 .splash{
 	background-image: url(../img/bg1.jpg);
